test/error/template_non.gw
function void my_func(){}
my_func<{int}>();
